--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "node-sass": "4.9.0"
   }
 }
